--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@ __pycache__/
 config.py
 experiments/
 opytimizer.log
+backup
+PSO
+main_Warm_Standard_Updating_Cost.py
+opt_Warm_Standard_Experiment.py
+mixer_circuit.png
